# ocra-wbi-plugins

./: .gitignore  .travis.yml  CMakeLists.txt  NOTES.md  OcraIcubConfig.cmake.in  OcraYarpConfig.cmake.in  README.md  _config.yml  authors.md  clients.md  doxygen.md  example-client.md  index.html  projects.md  stepping-demo.md  task-operations-demo.md  whatever.md
libs/ocra-yarp/: CMakeLists.txt
libs/ocra-yarp/include/ocra-yarp/: ControlThread.h  ControllerConnection.h  ModelThread.h  OcraControllerClient.h  OcraControllerClientModule.h  OcraControllerClientThread.h  OcraControllerServerModule.h  OcraControllerServerThread.h  OcraWbiConversions.h  OcraWbiModel.h  OcraWbiModelUpdater.h  OcraYarpTools.h  OcraYarpVocab.h  OptimizationThread.h  TrajectoryThread.h
libs/ocra-yarp/src/: ControlThread.cpp  ControllerConnection.cpp  ModelThread.cpp  OcraControllerClient.cpp  OcraControllerClientModule.cpp  OcraControllerClientThread.cpp  OcraControllerServerModule.cpp  OcraControllerServerThread.cpp  OcraWbiConversions.cpp  OcraWbiModel.cpp  OcraWbiModelUpdater.cpp  OcraYarpTools.cpp  OptimizationThread.cpp  TrajectoryThread.cpp
libs/ocraObservers/: CMakeLists.txt
libs/ocraObservers/include/ocraObservers/: observerBase.h
libs/ocraObservers/src/: observerBase.cpp
libs/ocraWbiPlugins/: CMakeLists.txt
libs/ocraWbiPlugins/include/ocraWbiPlugins/: ocraWbiModel.h  ocraWbiUtil.h
libs/ocraWbiPlugins/src/: ocraWbiModel.cpp  ocraWbiUtil.cpp
libs/taskSequences/: CMakeLists.txt
libs/taskSequences/include/taskSequences/: CMakeLists.txt  sequenceLibrary.h  sequenceTools.h
libs/taskSequences/src/: sequenceLibrary.cpp  sequenceTools.cpp
libs/taskSequences/src/sequences/: CartesianTest.cpp  Debug.cpp  Empty.cpp  Experiment.cpp  Exploration.cpp  FixedBaseMinimalTasks.cpp  FloatingBaseCoMBalancing.cpp  FloatingBaseEstimationTests.cpp  FloatingBaseMinimalTasks.cpp  InitialPoseHold.cpp  (+11 more)
modules/: CMakeLists.txt
modules/ISIRControllerYarpTest/: CMakeLists.txt
modules/ISIRControllerYarpTest/src/: iCubModel.cpp  iCubModel.h  iCubTaskGenerator.cpp  iCubTaskGenerator.h  iCubTaskManager.cpp  iCubTaskManager.h  main.cpp  mainTest.cpp
modules/ISIRObservers/: CMakeLists.txt
modules/ISIRObservers/src/: main.cpp  module.cpp
modules/ISIRWholeBodyController/: CMakeLists.txt
modules/ISIRWholeBodyController/app/: CMakeLists.txt
modules/ISIRWholeBodyController/src/: ISIRCtrlTaskManager.h  ScenariosICub.cpp  iCubTaskGenerator.cpp  iCubTaskGenerator.h  main.cpp  module.cpp  module.h  ocraWbiModel.cpp  ocraWbiUtil.cpp  orcWbiModel.cpp  sequenceCollection.cpp  sequenceLibrary.cpp  sequence_iCub.cpp  taskManagerCollection.cpp  taskManagerCollection.h  taskSetTests.cpp  taskSetTests.h  thread.cpp  thread.h
modules/activityManagers/: CMakeLists.txt
modules/activityManagers/testActivity/: CMakeLists.txt
modules/basicWholeBodyControlModule/: CMakeLists.txt  README.md
modules/basicWholeBodyControlModule/src/: ISIRCtrlTaskManager.cpp  iCubTaskGenerator.cpp  iCubTaskGenerator.h  main.cpp  module.cpp  module.h  orcWbiModel.cpp  orcWbiModel.h  orcWbiUtil.cpp  orcWbiUtil.h  taskSet1.cpp  taskSet1.h  taskSetTests.cpp  taskSetTests.h  thread.cpp  thread.h
modules/basicWholeBodyInterfaceModule/: CMakeLists.txt
modules/basicWholeBodyInterfaceModule/src/: main.cpp  main.cpp~  module.cpp  module.cpp~  module.h  thread.cpp  thread.cpp~  thread.h  thread.h~
modules/gOcraController/: CMakeLists.txt  README.md  param.txt  sequence_param.txt
modules/gOcraController/src/: gOcraSequenceCollection.cpp  main.cpp  module.cpp  ocraWbiModel.cpp  ocraWbiUtil.cpp  thread.cpp
modules/gocraController/: CMakeLists.txt  sequence_param.txt
modules/gocraController/src/: gOcraSequenceCollection.cpp  gocraWbiModel.cpp  main.cpp  module.cpp  thread.cpp
modules/gocraController/urdf/: icub_simulation.urdf
modules/ocraObservers/: CMakeLists.txt
modules/ocraObservers/app/: CMakeLists.txt
modules/ocraObservers/src/: main.cpp  thread.cpp
modules/wocraController/: CMakeLists.txt
modules/wocraController/app/: CMakeLists.txt
modules/wocraController/src/: main.cpp  module.cpp  thread.cpp
ocra-icub-clients/: CMakeLists.txt  README.md
ocra-icub-clients/example-client/: CMakeLists.txt
ocra-icub-clients/example-client/src/: ExampleClient.cpp  example-client.cpp
ocra-icub-clients/sitting-demo/: CMakeLists.txt
ocra-icub-clients/sitting-demo/src/: SittingDemoClient.cpp  main.cpp
ocra-icub-clients/standing-demo/: CMakeLists.txt
ocra-icub-clients/standing-demo/src/: StandingDemoClient.cpp  main.cpp
ocra-icub-clients/stepping-demo/: CMakeLists.txt
ocra-icub-clients/stepping-demo/src/: SteppingDemoClient.cpp  stepping-demo.cpp
ocra-icub-clients/task-operations-demo/: CMakeLists.txt
ocra-icub-clients/task-operations-demo/src/: TaskOpsClient.cpp  task-operations-demo.cpp
ocra-icub-clients/walking-client/: CMakeLists.txt  README.md
ocra-icub-clients/walking-client/app/: CMakeLists.txt
ocra-icub-clients/walking-client/cmake/: FindEigenGurobi.cmake  FindGUROBI.cmake
ocra-icub-clients/walking-client/src/: AdmissibilityConstraints.cpp  BaseOfSupport.cpp  Bounding.cpp  Constancy.cpp  Constraints.cpp.old  ContactConfigEnforcement.cpp  ContactConfigHistory.cpp  MIQPController.cpp  MIQPLinearConstraints.cpp  MIQPState.cpp  SSDSAlternation.cpp  Sequentiality.cpp  ShapeConstraints.cpp  SingleSupport.cpp  StepController.cpp  WalkingClient.cpp  ZmpController.cpp  ZmpPreviewController.cpp  main.cpp
ocra-icub-server/: CMakeLists.txt
ocra-icub-server/app/: CMakeLists.txt
ocra-icub-server/app/conf/: default.ini  ocra-icub-server.ini
ocra-icub-server/app/robots/: CMakeLists.txt
ocra-icub-server/app/scripts/: plotDebugInfo.xml
ocra-icub-server/include/ocra-icub-server/: IcubControllerServer.h  Module.h  OcraWbiConversions.h  OcraWbiModel.h  Thread.h  Utilities.h
ocra-icub-server/src/: IcubControllerServer.cpp  Module.cpp  OcraWbiConversions.cpp  OcraWbiModel.cpp  Thread.cpp  main.cpp
ocra-icub-tools/ocra-server-debugger/: CMakeLists.txt
ocra-icub-tools/ocra-server-debugger/src/: main.cpp
(+6103 files in other folders)
